# simple-game-template

./: .gitignore  Cargo.toml  build.sh  readme.md  release.sh  start_server.sh  update_build.sh
game/: Cargo.toml
game/src/: keymap.rs  lib.rs
game/src/template_game/: components.rs  entities.rs  mod.rs
game/src/template_game/systems/: mod.rs  run_camera.rs  run_input.rs  run_orbit.rs
server/: Cargo.toml
server/src/: main.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
