[package]
name = "game"
version = "0.1.0"
authors = ["Garrett Steffen <garrettsteffen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"
js-sys = "0.3.24"
web-sys = "0.3.24"
console_error_panic_hook = "0.1.6"
specs = "0.14.0"

[dependencies.goblin]
path = "../../goblin-engine"

[dependencies.homebrew-glm]
path = "../../../homebrew-glm"